CHANGES in VERSION 0.99.5

* in the clustering, considered when the size of cluster is only 1.
* add `partition_by_kmeanspp()`.

---------------------------------

CHANGES in VERSION 0.99.4

* support more ontologies.
* support to calculate similarity matrix by gene overlap.
* node partition fun changed to pam
----------------------------------