@@ -62,6 +62,7 @@ importFrom("BiocGenerics", "rownames", "colnames")
 importFrom("circlize", "colorRamp2", "rand_color")
 importFrom("cluster", "pam")
 importFrom("grDevices", "dev.interactive", "pdf", "dev.off")
+importFrom("grDevices", "rgb", "col2rgb")
 importFrom("graphics", "box", "plot")
 importFrom("graphics", "mtext", "par")
 importFrom("graphics", "text")
